# nfs-dataset

./: .gitignore  LICENSE  README.md  dataset.py  env.yml  extract.py  main.py  move.py  processing.py  pyproject.toml  setup.py  utils.py  verify.py
nfs-dataset/: dataset.py
nfsdata/: __init__.py  dataset.py  utils.py  xrd.py
